# diffhask

./: .ghci  .travis.yml  CHANGELOG.md  LICENSE  README.md  diffhask.cabal  stack.yaml
benchmark/: Main.hs
src/: .ghci  AmbiguousTypes.hs  Core.hs  FixPoint.hs  Num.hs  Ops.hs  Trace.hs
src/Internal/: .#Internal.hs  Internal.hs
src/Internal/NumHask/: Algebra.hs  Prelude.hs
src/Internal/NumHask/Algebra/: .#Additive.hs  .#Multiplicative.hs  Additive.hs  Basis.hs  Diff.hs  Distribution.hs  Field.hs  Magma.hs  Metric.hs  Module.hs  Multiplicative.hs  Ring.hs  Singleton.hs
src/NumHask/Algebra/: Additive.hs  Basis.hs  Distribution.hs  Field.hs  Multiplicative.hs  Ring.hs
test/: .#Spec.hs  Spec.hs
