name:                diffhask
version:             0.1.0.0
description:         DSL for forward and reverse mode automatic differentiation in haskell.  instpired by DiffSharp.
homepage:            https://github.com/o1lo01ol1o/diffhask
bug-reports:         https://github.com/o1lo01ol1o/diffhask/issues
license:             MIT
license-file:        LICENSE
author:              Tim Pierson
maintainer:          tim.pierson@gmail.com
copyright:           2017 Tim Pierson
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:     Core, Num
  other-modules:       Internal.Internal
                     , Internal.NumHask.Algebra
                     , Internal.NumHask.Algebra.Additive
                     , Internal.NumHask.Algebra.Basis
                     , Internal.NumHask.Algebra.Distribution
                     , Internal.NumHask.Algebra.Field
                     , Internal.NumHask.Algebra.Multiplicative
                     , Internal.NumHask.Algebra.Ring
                     , Internal.NumHask.Algebra.Magma
                     , Internal.NumHask.Algebra.Module
                     , Internal.NumHask.Algebra.Metric
                     , Internal.NumHask.Algebra.Singleton
                     , Internal.NumHask.Prelude




  ghc-options:         -Wall -fllvm -O2
  default-extensions: NegativeLiterals OverloadedStrings UnicodeSyntax ScopedTypeVariables
  build-depends:       base
                     , value-supply
                     , containers
                     , mtl
                     , text
                     , microlens
                     , microlens-th
                     , vector
                     , protolude
                     , dependent-sum-template
                     , dependent-sum
                     , dependent-map





  default-language:    Haskell2010

test-suite diffhask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions: NegativeLiterals OverloadedStrings UnicodeSyntax ScopedTypeVariables
  build-depends:       base
                     , diffhask
                     , text

                     , QuickCheck
                     , doctest
                     , tasty
                     , tasty-quickcheck
  
  ghc-options:         -Wall -Werror -threaded -fllvm -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark diffhask-benchmark 
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 -fllvm -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base
                     , criterion
                     , diffhask

source-repository head
  type:                git
  location:            https://github.com/o1lo01ol1o/diffhask.git
