name:                diffhask
version:             0.1.0.0
description:         DSL for forward and reverse mode automatic differentiation in haskell.  Port of DiffSharp.
homepage:            https://github.com/o1lo01ol1o/diffhask
bug-reports:         https://github.com/o1lo01ol1o/diffhask/issues
license:             MIT
license-file:        LICENSE
author:              Tim Pierson
maintainer:          tim.pierson@gmail.com
copyright:           2017 Tim Pierson
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:     Core, Num, Internal.NumHask.Prelude, Internal.Internal
  other-modules:       
                     Internal.NumHask.Algebra
                     , Internal.NumHask.Algebra.Additive
                     , Internal.NumHask.Algebra.Distribution
                     , Internal.NumHask.Algebra.Field
                     , Internal.NumHask.Algebra.Multiplicative
                     , Internal.NumHask.Algebra.Ring
                     , Internal.NumHask.Algebra.Magma
                     , Internal.NumHask.Algebra.Module
                     , Internal.NumHask.Algebra.Metric
                     , Internal.NumHask.Algebra.Singleton
                     




  ghc-options:         -Wall 
  default-extensions: NegativeLiterals UnicodeSyntax ScopedTypeVariables FlexibleContexts
  build-depends:       base
                     , value-supply
                     , containers
                     , mtl
                     , text
                     , microlens
                     , microlens-th
                     , vector
                     , protolude
                     , dimensions
                     , numhask
                     , numhask-array
                       , constraints
                     

                     
                     
                   
                      





  default-language:    Haskell2010

test-suite diffhask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions: NegativeLiterals OverloadedStrings UnicodeSyntax ScopedTypeVariables FlexibleContexts NoImplicitPrelude
  build-depends:       base
                     , diffhask
                     , text

                     , QuickCheck
                     , doctest
                     , tasty
                     , tasty-quickcheck
                       , tasty-hunit 
                     ,  numhask
                     , numhask-array

  
  ghc-options:         -Wall  -threaded  -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark diffhask-benchmark 
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fllvm -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       base
                     , criterion
                     , diffhask
                       , numhask
                     , numhask-array


source-repository head
  type:                git
  location:            https://github.com/o1lo01ol1o/diffhask.git
